_includes/manuals/1.6/5.7.3_kerberos.md
In this part of the tutorial we will show how to set up Foreman authentication manually (without using installer option).

At first we enroll Foreman machine and define `HTTP/<the-foreman-fqdn>` service in the FreeIPA server. Then we define HBAC service and rules (for more information see the previous section). In the following steps we will use the HBAC service name *foreman-prod*.

Next step is to define matching PAM service on the Foreman machine. We create file `/etc/pam.d/foreman-prod` with the following content:

{% highlight bash %}
auth    required   pam_sss.so
account required   pam_sss.so
{% endhighlight %}

We will also want to enable two SELinux booleans on the Foreman machine:
{% highlight bash %}
setsebool -P allow_httpd_mod_auth_pam on
setsebool -P httpd_dbus_sssd on
{% endhighlight %}

Until all the packages are part of your operation system distribution, you can get them from Jan Pazdziora's copr yum repo. At http://copr.fedoraproject.org/coprs/adelton/identity_demo/ choose the correct .repo file. For example, for Foreman on RHEL 6, the following command will configure yum:

{% highlight bash %}
wget -O /etc/yum.repos.d/adelton-identity_demo.repo \
  https://copr.fedoraproject.org/coprs/adelton/identity_demo/repo/epel-6/adelton-identity_demo-epel-6.repo
{% endhighlight %}


Get the keytab for the service and set correct permissions (we assume the FreeIPA server is *ipa.example.com*, adjust to match your setup):
{% highlight bash %}
kinit admin
ipa-getkeytab -s $(awk '/^server =/ {print $3}' /etc/ipa/default.conf) -k /etc/http.keytab -p HTTP/$( hostname )
chown apache /etc/http.keytab
chmod 600 /etc/http.keytab
{% endhighlight %}

Install mod_auth_kerb and mod_authnz_pam:
{% highlight bash %}
yum install -y mod_auth_kerb mod_authnz_pam
{% endhighlight %}

Configure the module to be used by Apache (we assume the realm is *EXAMPLE.COM*, adjust to match your setup):
{% highlight text %}
# add to /etc/httpd/conf.d/auth_kerb.conf
LoadModule auth_kerb_module modules/mod_auth_kerb.so
LoadModule authnz_pam_module modules/mod_authnz_pam.so
<Location /users/extlogin>
  AuthType Kerberos
  AuthName "Kerberos Login"
  KrbMethodNegotiate On
  KrbMethodK5Passwd Off
  KrbAuthRealms EXAMPLE.COM
  Krb5KeyTab /etc/http.keytab
  KrbLocalUserMapping On
  # require valid-user
  require pam-account foreman-prod
  ErrorDocument 401 '<html><meta http-equiv="refresh" content="0; URL=/users/login"><body>Kerberos authentication did not pass.</body></html>'
  # The following is needed as a workaround for https://bugzilla.redhat.com/show_bug.cgi?id=1020087
  ErrorDocument 500 '<html><meta http-equiv="refresh" content="0; URL=/users/login"><body>Kerberos authentication did not pass.</body></html>'
</Location>
{% endhighlight %}

We tell Foreman that it is OK to trust the authentication done by Apache by adding to `/etc/foreman/settings.yml` or under *Administer > Settings > General*:
{% highlight yaml %}
:authorize_login_delegation: true
{% endhighlight %}

We restart Apache:
{% highlight bash %}
service httpd restart
{% endhighlight %}

The machine on which you run the browser to access Foreman's WebUI needs to be either FreeIPA-enrolled to the FreeIPA server or at least configured (typically in `/etc/krb5.conf`) to know about the FreeIPA server Kerberos services. The browser needs to have the Negotiate Authentication enabled; for example in Firefox, in the `about:config` settings, *network.negotiate-auth.trusted-uris* needs to include the Foreman server FQDN or its domain. If you then `kinit` as existing Foreman user to obtain Kerberos ticket-granting ticket, accessing Foreman's WebUI should not ask for login/password and should display the authenticated dashboard directly.

Please note that we use directive `require pam-account foreman-prod` to also check the access against FreeIPA's HBAC rule. If you do not see Kerberos authentication passing, check that the user is allowed access in FreeIPA (in the section about HBAC configuration we've named the HBAC rule *allow_forman_prod*).

