_includes/manuals/3.1/5.7.3_kerberos.md
In this part of the tutorial we will show how to set up Foreman authentication manually (without using installer option).

At first we enroll Foreman machine and define `HTTP/<the-foreman-fqdn>` service in the FreeIPA server. Then we define HBAC service and rules (for more information see the previous section). In the following steps we will use the HBAC service name *foreman-prod*.

Next step is to define matching PAM service on the Foreman machine. We create file `/etc/pam.d/foreman-prod` with the following content:

{% highlight bash %}
auth    required   pam_sss.so
account required   pam_sss.so
{% endhighlight %}

We will also want to enable two SELinux booleans on the Foreman machine:
{% highlight bash %}
setsebool -P allow_httpd_mod_auth_pam on
setsebool -P httpd_dbus_sssd on
{% endhighlight %}

Get the keytab for the service and set correct permissions (we assume the FreeIPA server is *ipa.example.com*, adjust to match your setup):
{% highlight bash %}
kinit admin
ipa-getkeytab -s $(awk '/^server =/ {print $3}' /etc/ipa/default.conf) -k /etc/http.keytab -p HTTP/$( hostname )
chown apache /etc/http.keytab
chmod 600 /etc/http.keytab
{% endhighlight %}

Install mod_auth_gssapi and mod_authnz_pam:
{% highlight bash %}
yum install -y mod_auth_gssapi mod_authnz_pam
{% endhighlight %}

Configure the module to be used by Apache (we assume the realm is *EXAMPLE.COM*, adjust to match your setup):
{% highlight text %}
# add to /etc/httpd/conf.d/auth_kerb.conf
LoadModule auth_gssapi_module modules/mod_auth_gssapi.so
LoadModule authnz_pam_module modules/mod_authnz_pam.so
<Location /users/extlogin>
  AuthType GSSAPI
  AuthName "GSSAPI Single Sign On Login"
  GssapiCredStore keytab:/etc/http.keytab
  GssapiSSLonly On
  GssapiLocalName On
  # require valid-user
  require pam-account foreman-prod
  ErrorDocument 401 '<html><meta http-equiv="refresh" content="0; URL=/users/login"><body>Kerberos authentication did not pass.</body></html>'
  # The following is needed as a workaround for https://bugzilla.redhat.com/show_bug.cgi?id=1020087
  ErrorDocument 500 '<html><meta http-equiv="refresh" content="0; URL=/users/login"><body>Kerberos authentication did not pass.</body></html>'
</Location>
{% endhighlight %}

We tell Foreman that it is OK to trust the authentication done by Apache by adding to `/etc/foreman/settings.yaml` or under *Administer > Settings > Authentication*:
{% highlight yaml %}
:authorize_login_delegation: true
{% endhighlight %}

We restart Apache:
{% highlight bash %}
service httpd restart
{% endhighlight %}

The machine on which you run the browser to access Foreman's WebUI needs to be either FreeIPA-enrolled to the FreeIPA server or at least configured (typically in `/etc/krb5.conf`) to know about the FreeIPA server Kerberos services. The browser needs to have the Negotiate Authentication enabled; for example in Firefox, in the `about:config` settings, *network.negotiate-auth.trusted-uris* needs to include the Foreman server FQDN or its domain. If you then `kinit` as existing Foreman user to obtain Kerberos ticket-granting ticket, accessing Foreman's WebUI should not ask for login/password and should display the authenticated dashboard directly.

Please note that we use directive `require pam-account foreman-prod` to also check the access against FreeIPA's HBAC rule. If you do not see Kerberos authentication passing, check that the user is allowed access in FreeIPA (in the section about HBAC configuration we've named the HBAC rule *allow_forman_prod*).
